Correction des bugs,tests et finalisation du backend